fix collapsed border

--- a/source/stylus/utilities/banner_defaults.styl
+++ b/source/stylus/utilities/banner_defaults.styl
@@ -13,8 +13,8 @@ BANNER DEFAULTS
 }
 #collapsed-content {
   position: absolute;
-  width: 970px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   top: 0px;
   left: 0px;
   z-index: 100;
@@ -28,8 +28,8 @@ BANNER DEFAULTS
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 970px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   background-color: #F1F1F1;
   z-index: 200;
   display: none;
